# job-scraper

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
src/: main.py
src/db/: database.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 4a0ecbca652e_create_job_postings_table.py
src/scraper/: base.py
src/scrapers/: naukri.py
