[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = "Industry-grade job scraper with database and analytics support"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0"
alembic = "^1.13"
requests = "^2.31"
beautifulsoup4 = "^4.12"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
black = "^24.0"
flake8 = "^7.0"
isort = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"